<resources>
    <string name="app_name">Shamel</string>
    <string name="map_key2">AIzaSyC4l5QxL27z4w0uuD_5X3g0IRhaUdvb0Q4</string>
    <string name="map_key">AIzaSyC4l5QxL27z4w0uuD_5X3g0IRhaUdvb0Q4</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="back">Back</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>


    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="search2">Search</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="send_a_message">Send a message</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="wait">Wait...</string>
    <string name="profile">Profile</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_account">New Account</string>
    <string name="skip">Skip</string>
    <string name="code">Code</string>
    <string name="already_have_an_account">Already have an account !</string>
    <string name="field_required">Field required</string>
    <string name="pass_short">Password too short</string>
    <string name="inv_email">Invalid email</string>
    <string name="perm_img_denied">Permission denied</string>
    <string name="ch_img">Choose Image</string>
    <string name="update_profile">Update Profile</string>
    <string name="no_image">No Image</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="logout">Logout</string>
    <string name="send_code">send code</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">confirm</string>
    <string name="resend">Resend</string>
    <string name="inv_sms_code">Invalid sms code</string>
    <string name="rate_app">Rate App</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_found">User is found</string>
    <string name="download">Download</string>
    <string name="inc_pas">Incorrect Password</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="favourite">Favorite</string>
    <string name="confirm2">Confirm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="done">Done</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="complaints">Complaints</string>
    <string name="add_ads">Add ads</string>
    <string name="gender">Gender</string>
    <string name="upload_image">Upload image</string>
    <string name="ad_title">Ad title</string>
    <string name="main_department">Main department</string>
    <string name="sub_department">Sub department</string>
    <string name="ads_details">Ads details</string>
    <string name="location_on_map">Location on map</string>
    <string name="whats_not_av">Not available</string>
    <string name="inv_whatsapp">Invalid whatsApp number</string>
    <string name="inv_url">Invalid url</string>
    <string name="contact_info">Contact info</string>
    <string name="location">Location</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="add_ad">Add ad</string>
    <string name="choose">Choose</string>
    <string name="ch_ad_img">Choose ad image</string>
    <string name="ch_main_dept">Choose main department</string>
    <string name="ch_sub_dpt">Choose sub department</string>
    <string name="show">Show</string>
    <string name="nationality">Nationality</string>
    <string name="city">City</string>
    <string name="ch_nat">Choose Nationality</string>
    <string name="ch_city">Choose City</string>
    <string name="my_ads">My Ads</string>
    <string name="filter">Filter</string>
</resources>
