<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="com.arabdevelopers.shamelapp.interfaces.Listeners.LoginListener" />
        <variable
            name="loginModel"
            type="com.arabdevelopers.shamelapp.models.LoginModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        tools:context=".activities_fragments.activity_login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/login_img"
                android:scaleType="fitXY"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/small_rounded_primary_stroke"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_call"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="+965"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"

                    />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/transparent"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/gray4"
                    android:textSize="15sp"
                    tools:ignore="TextFields"
                    android:text="@={loginModel.phone}"
                    error="@{loginModel.error_phone}"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/small_rounded_btn_dark"
                android:text="@string/confirm2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:onClick="@{()->listener.validate()}"
                />

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/transparent"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="@{()->listener.skip()}"
                />

        </LinearLayout>
    </ScrollView>
</layout>
