<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="listener"
            type="com.arabdevelopers.shamelapp.interfaces.Listeners.SignUpListener" />
        <variable
            name="model"
            type="com.arabdevelopers.shamelapp.models.SignUpModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities_fragments.activity_signup.SignUpActivity"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <FrameLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:onClick="@{()->listener.openSheet()}"


                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:civ_circle_background_color="@color/white"
                        app:civ_border_width="1dp"
                        app:civ_border_color="@color/white"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circle_stroke_white"
                        android:src="@drawable/ic_camera"
                        android:padding="45dp"
                        android:tint="@color/white"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/name"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="50dp"
                    />
                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/small_rounded_white_stroke"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@={model.name}"
                    error="@{model.error_name}"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"

                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/consGender"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@drawable/rounded_white_stroke"



                        >
                        <FrameLayout
                            android:id="@+id/flMale"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:background="@drawable/rounded_gender"
                            android:onClick="@{()->listener.onMaleClicked()}"
                            >
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="40dp"
                                android:src="@drawable/ic_male"
                                android:tint="@color/white"
                                android:padding="5dp"
                                android:layout_gravity="center"
                                android:clickable="false"
                                android:longClickable="false"

                                />
                        </FrameLayout>


                        <FrameLayout
                            android:id="@+id/flFemale"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:onClick="@{()->listener.onFemaleClicked()}"

                            >
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="40dp"
                                android:src="@drawable/ic_female"
                                android:tint="@color/white"
                                android:padding="5dp"
                                android:layout_gravity="center"
                                android:clickable="false"
                                android:longClickable="false"

                                />
                        </FrameLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/consGender"
                        app:layout_constraintTop_toBottomOf="@id/consGender"
                        android:layout_marginTop="20dp"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:text="@string/male"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/consGender"
                        app:layout_constraintTop_toBottomOf="@id/consGender"
                        android:layout_marginTop="20dp"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:text="@string/female"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/small_rounded_white"
                    android:layout_marginTop="40dp"
                    android:onClick="@{()->listener.checkDataValid()}"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_done"
                        android:tint="@color/colorPrimary"
                        android:clickable="false"
                        android:longClickable="false"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/done"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_trans"
            android:padding="16dp"
            app:el_duration="800"
            app:el_expanded="false"
            app:el_parallax=".5"
            android:layout_gravity="bottom"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/flGallery"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:onClick="@{()->listener.checkReadPermission()}"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_gallery"
                            android:tint="@color/color1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gallery"
                            android:textColor="@color/color1"
                            android:textSize="16sp" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/flCamera"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:onClick="@{()->listener.checkCameraPermission()}"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_camera"
                            android:tint="@color/color5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/camera"
                            android:textColor="@color/color5"
                            android:textSize="16sp" />
                    </LinearLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:onClick="@{()->listener.closeSheet()}"
                    />
            </LinearLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>

    </FrameLayout>
</layout>
