<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="180dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo"
                />

            <EditText
                android:id="@+id/edtCode"
                android:layout_width="0dp"
                android:layout_height="45dp"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="number"
                android:hint="@string/confirmation_code"
                android:background="@color/transparent"
                android:textSize="14sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:layout_marginTop="100dp"
                />
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/edtCode"
                android:background="@color/white"/>
            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="150dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:background="@drawable/rounded_btn_white"
                android:text="@string/confirm"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toTopOf="@id/consTimer"
                android:layout_marginBottom="50dp"
                app:layout_constraintVertical_bias="0"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="100dp"
                >
                <ImageView
                    android:id="@+id/iconResend"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_message"
                    android:tint="@color/white"
                    android:padding="5dp"

                    />
                <TextView
                    android:id="@+id/tvResendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iconResend"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/resend"/>

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="00:00"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iconResend"
                    android:layout_marginTop="8dp"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
